#set(LIB3RD_REPO_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
#set(LIB3RD_REPO_DOWNLOADED_DIR ${LIB3RD_REPO_DIR}/lib3rd.downloaded)
set (CMAKE_CXX_STANDARD 14)

project(lib3rd.downloaded)
#add_subdirectory(boost_1_67_0)
#add_subdirectory(boost_1_68_0)
#add_subdirectory(boost_1_69_0)
add_subdirectory(boost_1_70_0)
add_subdirectory(zeromq-4.2.3)
add_subdirectory(cppzmq)
add_subdirectory(catch2)
add_subdirectory(rxcpp)
add_subdirectory(cpplinq)
#add_subdirectory(libxml2)
#add_subdirectory(libxslt)
add_subdirectory(lua-5.3.5)
add_subdirectory(minischeme-0.85k4)
add_subdirectory(tinyscheme-1.41)
add_subdirectory(tinyscheme-1.40)
add_subdirectory(tinyscheme-1.31)
add_subdirectory(scheme48-1.9.2)
add_subdirectory(s7)
add_subdirectory(clips-6_40-beta3)
add_subdirectory(mstch)
add_subdirectory(yoga)
add_subdirectory(lib3rd)

